// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EsFormTextarea <EsFormTextarea /> 1`] = `
"<div class="input-wrapper justify-content-end mb-2"><label for="myID" class="label font-weight-semibold justify-content-start">Notes
    <!----></label>
  <div class="input-holder"><textarea id="myID" rows="2" wrap="soft" class="es-form-textarea w-100 form-control"></textarea>
    <!---->
    <!---->
    <!---->
  </div>
</div>"
`;

exports[`EsFormTextarea <EsFormTextarea <label /> /> 1`] = `
"<div required="required" class="input-wrapper justify-content-end mb-2"><label for="myID" class="label font-weight-semibold justify-content-start"> <span class="text-danger">
            *
        </span></label>
  <div class="input-holder"><textarea id="myID" rows="2" wrap="soft" class="es-form-textarea w-100 form-control"></textarea>
    <!---->
    <div class="invalid-feedback">
      This field is required.
    </div>
    <!---->
  </div>
</div>"
`;

exports[`EsFormTextarea <EsFormTextarea props /> 1`] = `
"<div required="required" class="input-wrapper justify-content-end mb-2"><label for="myID" class="label font-weight-semibold justify-content-start"> <span class="text-danger">
            *
        </span></label>
  <div class="input-holder"><textarea id="myID" rows="2" wrap="soft" class="es-form-textarea w-100 form-control"></textarea>
    <!---->
    <div class="invalid-feedback">
      This field is required.
    </div>
    <!---->
  </div>
</div>"
`;

exports[`EsFormTextarea <EsFormTextarea v-model /> 1`] = `
"<div>
  <div class="input-wrapper justify-content-end mb-2"><label for="testId" class="label font-weight-semibold justify-content-start">
      <!----></label>
    <div class="input-holder"><textarea id="testId" rows="2" wrap="soft" class="es-form-textarea w-100 form-control" data-testid="testTextarea"></textarea>
      <!---->
      <!---->
      <!---->
    </div>
  </div>
</div>"
`;

exports[`EsFormTextarea <EsFormTextarea>slots</EsFormTextarea> 1`] = `
"<div class="input-wrapper justify-content-end mb-2"><label for="myID" class="label font-weight-semibold justify-content-start">Notes
    <!----></label>
  <div class="input-holder"><textarea id="myID" rows="2" wrap="soft" class="es-form-textarea w-100 form-control"></textarea>
    <!---->
    <div class="invalid-feedback">Please enter a valid value.</div>
    <div class="valid-feedback">Your response has been submitted successfully.</div>
  </div>
</div>"
`;
